# Maarachot

./: CMakeLists.txt  MyMathFun.c  MyMathFun.h  NumClass.h  advencedClassificatinRecursion.c  advencedClassificatinRecursion.h  advencedClassificationLoop.c  advencedClassificationLoop.h  advencedClassificationRecursion.c  advencedClassificationRecursion.h  basicClassification.c  basicClassification.h  main  main.c  maindloop  maindrec  mains  makefile  try.txt
